# recipe-saver-backend

./: config.py  database.py  main.py  pyproject.toml  schemas.py  scraper.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_auth.py
api/: auth.py  collections.py  deps.py  errors.py  recipes.py
auth/: passwords.py
db/: __init__.py  models.py  session.py
repositories/: auth_events.py  collections.py  recipes.py  sessions.py  users.py
tests/: conftest.py  test_auth.py  test_collections.py  test_recipes.py
tests/fixtures/: sample_recipe.html
