[project]
name = "recipe-saver-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "requests",
    "recipe-scrapers",
    "python-recipy>=0.1.14",
]
