[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
name = "recipe-saver-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "requests",
    "recipe-scrapers",
    "python-recipy>=0.1.14",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.29",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]
